change client  with cities

--- a/minimal-client/index.html
+++ b/minimal-client/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animals</title>
+    <title>Cities</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <input id="animalToCreate" placeholder="Type her name" type="text">
-    <input id="strengthToCreate" placeholder="Type her strength" type="number">
-    <button id="createAnimalButton"></button>
-    <div id="animalsContainer"> </div>
+    <input id="cityToCreate" placeholder="Type her name" type="text">
+    <input id="countryToCreate" placeholder="Type her country" type="text">
+    <button id="createCityButton"></button>
+    <div id="citiesContainer"> </div>
     <script src="script.js"></script>
 
 </body>
